Wed May 27 02:31:38 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_getc): the function for
	  rl_getc_function must be a byte function.
	  so use getbyte method. [ruby-dev:38535]

Tue May 26 14:24:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c: fixed types.

	* common.mk (bignum.o, numeric.o): depend on util.h.

	* bignum.c, marshal.c: fixed types.

	* numeric.c (infinite_value): use ruby_div0.

	* include/ruby/util.h (ruby_div0): moved from marshal.c.

Tue May 26 11:01:41 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* lib/mkmf.rb: use map! to replace strings in $objs array.

Tue May 26 10:12:08 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bignew_1): inline memory allocation.

	* bignum.c (bigtrunc): call rb_big_resize() only when needed.

	* bignum.c (bigfixize): declare inline.

Tue May 26 05:39:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (FilePathValue): prevent from GC.

	* include/ruby/ruby.h (NUM2LONG): added GCC specific optimization.

Tue May 26 03:41:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (rb_gmtime, rb_localtime): gmtime and localtime return
	  NULL on error.  [ruby-core:23551]

Tue May 26 03:38:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_each_char, rb_str_each_codepoint): string
	  length must be long.

Mon May 25 13:27:32 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* lib/mkmf.rb: dont use gsub! method for frozen string.

Mon May 25 11:47:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/mkconfig.rb, tool/instruby.rb: removed redundant code.

Mon May 25 09:34:09 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_hash): avoid calling rb_enc_str_asciionly_p().

	* string.c (rb_str_replace): avoid redundant calling rb_str_new4().

	* string.c (str_replace): factor out replacement from
	  rb_str_replace() without type check nor discarding the
	  destination contents.
