@@ -1,3 +1,7 @@
+Wed May 27 23:00:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (struct parser_params): lex_gets_ptr should be long.
+
 Wed May 27 02:31:38 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* ext/readline/readline.c (readline_getc): the function for
